# agentic-systems

./: .gitignore  .kitty-project-session.conf  README.md  generate-token.py  langgraph.json  main.py  mm-launch.ps1  pyproject.toml
getting_started/: healthcheck.py
module_01/: broken_chain.py  chaining.py  document.py  main.py  runnables.py  runnables_test.py  tokens.py
module_02/: cloud_retriever.py  document_retriever.py  main.py
module_03/: augmented_llm.py
module_04/src/agent/: __init__.py  graph.py
module_04/src/workflows/: __init__.py  basic_chatbot.py  chained_routing.py  example_graph.py  orchestrator_workers.py  parallelization.py  prompt_chaining.py  routing.py  simple_routing.py
module_05/: authn.py  config.py  custom_github_server.py  math_server.py  merge_muppet.py  prompts.py  simple_agent.py  test_gh_authn.py  weather_server.py
resources/: sample_cv.txt  sample_swe_cv.txt  sample_swe_vacancy.txt  sample_vacancy.txt  some_file.md
sample_requests/: github.http
webhook/: main.py  test_utils.py  utils.py
