[project]
name = "agentic-systems"
version = "0.1.0"
description = "Exploration of agentic systems using LangChain and LangGraph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "grandalf>=0.8",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-azure-ai>=0.1.4",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-nomic>=0.1.5",
    "langchain-ollama>=0.3.8",
    "langchain-qdrant>=0.2.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "nltk>=3.9.1",
    "nomic[local]>=3.5.3",
    "qdrant-client>=1.15.1",
    "tiktoken>=0.11.0",
    "unstructured[md]>=0.18.14",
]
